kubernetes/ufoo/10-tech/observability/prometheus/grafana/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.agrrh.com`) || Host(`grafana.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: traefik
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: metrics
          port: 80
